# python-samples

./: .gitignore  README.md  SQLite3_country.db  api-sample.py  argparse-samples.py  argparse.py  async-samples.py  az-keyvault.py  binary-search.py  calculator-tk.py  claude-vulscan.md  claude-vulscan.py  conda-list-2404020.txt  country_info-22-08-01.csv  country_info.csv  country_info.xlsx  country_lang_info.xlsx  create_word_doc.py  csv2word-pandas.py  cups.py  cyphers.py  dash-streaming.py  diagrams-graphwiz.py  dijkstra-yt.py  dijkstra.py  dijkstras.py  dundars-list.py  email-csv.py  endecode-protobuf.py  exifclean.py  fido2-titan.py  flake8.txt  flash-cards.py  foods.py  gantt-chart.py  gantt-plotly.py  gcp-services.py  get-key-value.py  goog-cal-alert.py  gpu-sample.py  (+87 more)
datafreme-lookup/: 2022-08-09-CAIQ4.0.1.consul.md  CAIQ4.0.1.consul.csv  dataframe-lookup-multiline.py  metrics.csv
dice-stats/: dice-stats.py  pyproject.toml  requirements.txt
errors/: README.md  divide2.py  prime.py  print-cups.py
fastapi/: README.md
microbit/: weather-api.py
recommender/: surprise.py
show-recommendations/: pyproject.toml  requirements.in  requirements.txt  show-recommendations.py
tic-tac-toe/: test_TicTacToe.py  tic-tac-toe-mm.py  tic-tac-toe.py
weather/: wttr-weather.py
